--- a/style.css
+++ b/style.css
@@ -2,4 +2,45 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+ margin-left: auto;
+ margin-right: auto;
+ display: block;
+}
+
+nav {
+  text-align: center;
+}
+
+nav > a {
+padding-left: 10px;
+padding-right: 10px;
+background: aquamarine;
+}
+
+figcaption {
+  text-align: center;
+  font-size: smaller;
+}
+
+#featured-property > p {
+  width: 800px;
+  margin: auto;
+  padding: 10px;
+}
+
+#details > div {
+float: left;
+background-color: lightblue;
+text-align: center;
+width: 25%;
+}
+
+
